--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf build/ && tsc",
     "server": "nodemon src/server.ts",
-    "start": ""
+    "start": "node src/server.ts"
   },
   "repository": {
     "type": "git",
